--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -3,6 +3,6 @@
 	top:0;
 	right:0; left: 0;
 	z-index: 100;
-	transition: all 2s;
 	/*transition: all 2s;*/
+	box-shadow: 0 10px 5px -5px rgba(0,0,0, 0.5);
 }
