--- a/src/components/NotificationBar/notificationBar.scss
+++ b/src/components/NotificationBar/notificationBar.scss
@@ -6,7 +6,7 @@
   left: 50%;
   transition: all 0.25s;
   border-radius: 4px;
-  //box-shadow: 0 5px 15px 1px rgba(0,0,0, 0.1);
+  box-shadow: 0 5px 5px -5px rgba(0,0,0, 0.5);
   transform: translate(-50%, -110%);
 }
 
@@ -33,4 +33,8 @@
 .notification-bar--right {
   left: auto;
   right: 20px;
+}
+
+.message {
+  //box-shadow: none !important;
 }
